--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -87,6 +87,11 @@
                                 注册
                             </el-link>
                         </div>
+
+                        <div>
+                            登录后未跳转?
+                            <el-button type="text" @click="changeMain">点我</el-button>
+                        </div>
                     </template>
                 </el-form-item>
             </el-form>
@@ -121,7 +126,10 @@
                 })
             };
             return {
+                //职位
+                position:'',
                 //登录表单
+
                 user: {
                     username: '',
                     password: '',
@@ -153,10 +161,9 @@
                             data: _this.user,
                         }).then(function (resp) {
 
-                            console.log(resp.data);
-                            console.log(resp.data.code);
 
                             if (resp.data.code === 200) {
+                                _this.position = resp.data.data;
                                 _this.$message({
                                     message: '登录成功~3秒后跳转',
                                     type: 'success'
@@ -200,7 +207,15 @@
             },
 
             changeMain() {
-                location.href = "http://localhost:8080/qg-engineering-management-system/chiefPeople.html";
+                const position = this.position;
+                if (position === 0) {
+                    location.href = "http://localhost:8080/qg-engineering-management-system/chiefPeople.html";
+                }else if (position === 1) {
+
+                }else if (position === ''){
+                    _this.$message.error("请登录~");
+                }
+
             }
         },
     });
