--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -207,14 +207,17 @@
             },
 
             changeMain() {
-                const position = this.position;
+
+                const  position = this.position;
                 if (position === 0) {
                     location.href = "http://localhost:8080/qg-engineering-management-system/chiefPeople.html";
                 }else if (position === 1) {
-
-                }else if (position === ''){
-                    _this.$message.error("请登录~");
+                    location.href = "http://localhost:8080/qg-engineering-management-system/engineering.html";
+                }else if (position === '' || position === -1){
+                    this.$message.error("请登录~");
                 }
+
+
 
             }
         },
