--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -57,8 +57,8 @@
 
 <body>
 <h1>工程管理系统</h1>
-<div  id="login">
-    <el-container class="center">
+<div  id="login" >
+    <el-container class="center" style="border: #666666 solid 1px">
         <el-main>
             <el-form :model="user" :rules="rules" ref="user" label-width="100px" class="demo-ruleForm" id="loginDiv">
                 <el-form-item >
@@ -111,6 +111,9 @@
         el: "#loginDiv",
         data() {
             const validateUserName = (rule, value, callback) => {
+
+
+
                 const _this = this;
                 axios({
                     method: "post",
@@ -213,12 +216,13 @@
                     location.href = "http://localhost:8080/qg-engineering-management-system/chiefPeople.html";
                 }else if (position === 1) {
                     location.href = "http://localhost:8080/qg-engineering-management-system/engineering.html";
+                }else if (position === 2) {
+                    location.href = "http://localhost:8080/qg-engineering-management-system/foreman.html";
+                } else if (position === 3) {
+                    location.href = "http://localhost:8080/qg-engineering-management-system/worker.html";
                 }else if (position === '' || position === -1){
                     this.$message.error("请登录~");
                 }
-
-
-
             }
         },
     });
