--- a/src/main/webapp/personalInfo.html
+++ b/src/main/webapp/personalInfo.html
@@ -15,7 +15,7 @@
             color: #333;
         }
 
-        #img{
+        #img {
             position: absolute;
             top: 0;
             bottom: 0;
@@ -31,9 +31,11 @@
             position: relative;
             overflow: hidden;
         }
+
         .avatar-uploader .el-upload:hover {
             border-color: #409EFF;
         }
+
         .avatar-uploader-icon {
             font-size: 28px;
             color: #8c939d;
@@ -42,6 +44,7 @@
             line-height: 178px;
             text-align: center;
         }
+
         .avatar {
             width: 178px;
             height: 178px;
@@ -55,7 +58,9 @@
     <el-aside width="200px" style="background-color: rgb(238, 241, 246)">
         <el-menu :default-openeds="['1', '3']">
 
-            <el-menu-item index="1"><el-button @click="myTeam" target="_blank">队伍</el-button></el-menu-item>
+            <el-menu-item index="1">
+                <el-button @click="myTeam" target="_blank">队伍</el-button>
+            </el-menu-item>
 
             <el-menu-item index="2">个人信息</el-menu-item>
 
@@ -76,31 +81,33 @@
             <el-tag v-model="username">{{username}}</el-tag>
         </el-header>
 
-        <el-form ref="form" :model="form" label-width="80px">
-            <el-form-item label="用户名称">
-                <el-input v-model="form.name"  style="width: 300px;"></el-input>
+        <!--        个人信息页面-->
+        <el-form ref="user" :model="user" label-width="80px" :rules="rules">
+            <el-form-item label="用户名称" prop="username">
+                <el-input v-model="user.username" style="width: 300px;" ></el-input>
 
-<!--                <el-upload-->
-<!--                        class="avatar-uploader"-->
-<!--                        action="https://jsonplaceholder.typicode.com/posts/"-->
-<!--                        :show-file-list="false"-->
-<!--                        :on-success="handleAvatarSuccess"-->
-<!--                        :before-upload="beforeAvatarUpload">-->
-<!--                    <img v-if="imageUrl" :src="imageUrl" class="avatar">-->
-<!--                    <i v-else class="el-icon-plus avatar-uploader-icon"></i>-->
-<!--                </el-upload>-->
+                <!--                <el-upload-->
+                <!--                        class="avatar-uploader"-->
+                <!--                        action="https://jsonplaceholder.typicode.com/posts/"-->
+                <!--                        :show-file-list="false"-->
+                <!--                        :on-success="handleAvatarSuccess"-->
+                <!--                        :before-upload="beforeAvatarUpload">-->
+                <!--                    <img v-if="imageUrl" :src="imageUrl" class="avatar">-->
+                <!--                    <i v-else class="el-icon-plus avatar-uploader-icon"></i>-->
+                <!--                </el-upload>-->
             </el-form-item>
             <el-form-item label="密码">
                 <el-input
                         placeholder="*********"
-                        :disabled="true">
+                        :disabled="true" style="width: 300px;">
                 </el-input>
+                <el-button type="text" @click="dialogFormVisible = true">修改</el-button>
             </el-form-item>
 
             <el-form-item label="性别">
                 <template>
-                    <el-radio v-model="radio" label="1">男</el-radio>
-                    <el-radio v-model="radio" label="0">女</el-radio>
+                    <el-radio v-model="user.gender" label="1" prop="gender">男</el-radio>
+                    <el-radio v-model="user.gender" label="0" prop="gender">女</el-radio>
                 </template>
             </el-form-item>
 
@@ -110,10 +117,35 @@
 
 
             <el-form-item>
-                <el-button type="primary" @click="onSubmit">立即创建</el-button>
-                <el-button>取消</el-button>
+                <el-button type="primary" @click="onSubmit('user')">保存</el-button>
             </el-form-item>
         </el-form>
+
+
+        <!--修改密码弹框-->
+        <el-dialog title="修改密码" :visible.sync="dialogFormVisible" style="width: 1000px">
+            <el-form :model="passwordForm" :rules="rules" ref="passwordForm" ref="passwordForm">
+
+                <el-form-item label="原密码" prop="oldPassword">
+                    <el-input type="password" v-model="passwordForm.oldPassword" style="width: 300px;"
+                              autocomplete="off"></el-input>
+                </el-form-item>
+
+                <el-form-item label="密码" prop="newPassword">
+                    <el-input type="password" v-model="passwordForm.newPassword" style="width: 300px;"
+                              autocomplete="off"></el-input>
+                </el-form-item>
+
+                <el-form-item label="确认密码" prop="checkPass">
+                    <el-input type="password" v-model="passwordForm.checkPass" style="width: 300px;"
+                              autocomplete="off"></el-input>
+                </el-form-item>
+            </el-form>
+            <div slot="footer" class="dialog-footer">
+                <el-button @click="dialogFormVisible = false">取 消</el-button>
+                <el-button type="primary" @click="changePasswordSubmit('passwordForm')">确 定</el-button>
+            </div>
+        </el-dialog>
     </el-container>
 </el-container>
 
@@ -127,62 +159,97 @@
     //创建vue对象
     new Vue({
         el: "#infoDiv",
-        mounted(){
+
+        mounted() {
             const _this = this;
             axios({
                 method: "post",
                 url: "http://localhost:8080/qg-engineering-management-system/user/getSession",
             }).then(function (resp) {
                 _this.username = resp.data.msg;
-                _this.position = resp.data.data;
-                _this.selectMyTask();
-                _this.selectMyTeam(resp.data.msg);
-                console.log(resp.data.msg);
-                _this.querySon();
+                _this.position = resp.data.data.position;
+                _this.user.email = resp.data.data.email;
+                _this.user.gender = resp.data.data.gender;
+                _this.user.username = _this.username;
             })
         },
+
         data() {
             const validateUserName = (rule, value, callback) => {
+
                 const _this = this;
+                if (value === _this.username) {
+                    callback();
+                }
                 axios({
                     method: "post",
                     url: "http://localhost:8080/qg-engineering-management-system/user/select",
                     data: _this.user
-                }).then(function (resp)  {
-                    if (resp.data.code === 500220) {
-                        // _this.$message.error(resp.data.msg);
+                }).then(function (resp) {
+                    if (resp.data.code === 500210) {
                         callback(new Error(resp.data.msg));
                     } else {
                         callback();
                     }
                 })
             };
-            return {
 
-                //用户
+            //密码校验
+            const validatePass = (rule, value, callback) => {
+                if (value === '') {
+                    callback(new Error('请输入密码'));
+                } else {
+                    if (this.passwordForm.checkPass !== '') {
+                        this.$refs.passwordForm.validateField('checkPass');
+                    }
+                    callback();
+                }
+            };
+
+            //第二次密码输入校验
+            const validatePass2 = (rule, value, callback) => {
+                if (value === '') {
+                    callback(new Error('请再次输入密码'));
+                } else if (value !== this.passwordForm.newPassword) {
+                    callback(new Error('两次输入密码不一致!'));
+                } else {
+                    callback();
+                }
+            };
+            return {
+                passwordForm:{
+
+                    userId:'',
+                    oldPassword:'',
+                    newPassword:'',
+                    checkPassword:'',
+                },
+
+                //修改密码弹框
+                dialogFormVisible: false,
+
+
+                //修改表单中的用户信息
                 user: {
+                    userId:'',
                     username: '',
                     password: '',
-                    checkPass: '',
                     email: '',
-                    position:''
+                    position: '',
+                    gender:'',
                 },
 
                 //头像地址
                 imageUrl: '',
 
-
-                form: {
-                    name: '',
-                    region: '',
-                    date1: '',
-                    date2: '',
-                    delivery: false,
-                    type: [],
-                    resource: '',
-                    desc: ''
+                //老用户信息,比对新信息,防止用户频繁请求数据库修改
+                oldUser:{
+                    username:'',
+                    password: '',
+                    email: '',
+                    position: '',
+                    gender:'',
                 },
-
 
                 //登录表单
                 username: '',
@@ -195,9 +262,23 @@
                         {min: 2, max: 20, message: '长度在 2 到 20 个字符', trigger: 'blur'},
                         {validator: validateUserName, trigger: 'blur'}
                     ],
-                    password: [
+                    oldPassword: [
                         {required: true, message: '请输入密码', trigger: 'blur'},
-                        {min: 6, max: 20, message: '长度在 6 到 20 个字符', trigger: 'blur'}
+                        {min: 6, max: 20, message: '长度在 6 到 20 个字符', trigger: 'blur'},
+                        // {validator: validatePass, trigger: 'blur'}
+                    ],
+
+                    newPassword: [
+                        {required: true, message: '请输入密码', trigger: 'blur'},
+                        {min: 6, max: 20, message: '长度在 6 到 20 个字符', trigger: 'blur'},
+                        {validator: validatePass, trigger: 'blur'}
+                    ],
+                    checkPass: [
+                        {validator: validatePass2, trigger: 'blur'}
+                    ],
+                    email: [
+                        {required: true, message: '请输入邮箱地址', trigger: 'blur'},
+                        {type: 'email', message: '请输入正确的邮箱地址', trigger: ['blur', 'change']}
                     ],
                 }
 
@@ -206,6 +287,40 @@
 
         methods: {
 
+
+            //修改密码提交表单
+            changePasswordSubmit(formName) {
+                this.$refs[formName].validate((valid) => {
+                    if (valid) {
+                        const _this = this;
+                        axios({
+                            method: "post",
+                            url: "http://localhost:8080/qg-engineering-management-system/user/changePassword",
+                            data: _this.passwordForm.oldPassword +"&" + _this.passwordForm.newPassword,
+                        }).then(function (resp) {
+                            if (resp.data.code === 200) {
+                                _this.$message({
+                                    message: '密码修改成功~请重新登录账号',
+                                    type: 'success'
+                                });
+                                //通过用户的职位进行页面的跳转
+                                setTimeout(_this.loginOut, 2000);
+
+                            } else if (resp.data.code === 500200) {
+                                _this.$message.error(resp.data.msg);
+                            } else {
+                                _this.$message.error('未知错误,请联系管理员');
+                            }
+                            _this.dialogFormVisible = false;
+                            _this.resetForm('passwordForm');
+
+                        })
+                    } else {
+                        console.log('error submit!!');
+                        return false;
+                    }
+                });
+            },
 
 
             handleAvatarSuccess(res, file) {
@@ -225,44 +340,55 @@
             },
 
 
-            myTeam(){
+            myTeam() {
                 if (this.position === 0) {
                     window.location.replace("http://localhost:8080/qg-engineering-management-system/chiefPeople.html");
-                }else if (this.position === 1) {
+                } else if (this.position === 1) {
                     window.location.replace("http://localhost:8080/qg-engineering-management-system/engineering.html");
-                }else if (this.position === 2) {
+                } else if (this.position === 2) {
                     window.location.replace("http://localhost:8080/qg-engineering-management-system/foreman.html");
-                }else if (this.position === 3) {
+                } else if (this.position === 3) {
                     window.location.replace("http://localhost:8080/qg-engineering-management-system/worker.html");
                 }
             },
 
-            onSubmit() {
-                console.log('submit!');
-            },
-            submitForm(formName) {
+            //修改个人信息
+            onSubmit(formName) {
                 this.$refs[formName].validate((valid) => {
                     if (valid) {
                         const _this = this;
+                        //若是全部没有进行修改,不应该发送请求
+
+                        // console.log("old = "+ _this.oldUser.username);
+                        // console.log("new = "  + _this.user.username);
+                        // if (_this.user.username === _this.oldUser.username
+                        //     && _this.user.email === _this.oldUser.email
+                        // && _this.user.gender === _this.oldUser.gender) {
+                        //
+                        //     console.log("不会请求数据库");
+                        //     _this.$message({
+                        //         message: '信息修改成功~',
+                        //         type: 'success'
+                        //     });
+                        //     return ;
+                        // }
+
+                        const answerStr = JSON.stringify(_this.user);
+                        const o = JSON.parse(answerStr);
+                        const r = JSON.stringify(o);
                         axios({
                             method: "post",
-                            url: "http://localhost:8080/qg-engineering-management-system/user/login",
-                            data: _this.user,
+                            url: "http://localhost:8080/qg-engineering-management-system/user/modifyInfo",
+                            data: r +"&"+_this.username,
                         }).then(function (resp) {
-
-
                             if (resp.data.code === 200) {
-                                _this.position = resp.data.data;
                                 _this.$message({
-                                    message: '登录成功~3秒后跳转',
+                                    message: '信息修改成功~',
                                     type: 'success'
                                 });
-                                //通过用户的职位进行页面的跳转
-                                setTimeout(_this.changeMain,2000);
+                                setTimeout(_this.refresh,1000);
 
-                            } else if (resp.data.code === 500200) {
-                                _this.$message.error(resp.data.msg);
-                            } else {
+                            }  else {
                                 _this.$message.error('未知错误,请联系管理员');
                             }
                         })
@@ -273,27 +399,34 @@
                 });
             },
 
+
             resetForm(formName) {
                 this.$refs[formName].resetFields();
             },
 
 
-            //用户名输入失焦,去看看数据库是否有没有对应的名字
-            myOnblur() {
+
+            //退出登录
+            loginOut() {
                 const _this = this;
                 axios({
                     method: "post",
-                    url: "http://localhost:8080/qg-engineering-management-system/user/select",
-                    data: _this.user
-                }).then(function (resp)  {
-                    if (resp.data.code === 500220) {
-                        _this.$message.error(resp.data.msg);
-                    }
+                    url: "http://localhost:8080/qg-engineering-management-system/user/loginOut",
+                }).then(function (resp) {
+                    _this.$message.success("您已经退出登录");
+                    setTimeout(_this.out, 1000);
                 })
             },
 
+            out() {
+                location.href = "http://localhost:8080/qg-engineering-management-system/login.html";
+            },
 
+            refresh() {
+                location.href = "http://localhost:8080/qg-engineering-management-system/personalInfo.html";
+            },
         },
+
     });
 
 
